--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Pluralsite Admin Application</title>
-</head>
-<body bgcolor=white>
-
-
-<h1> React and Redux in ES6</h1>
-<div id="app"></div>
-<script src="/bundle.js"></script>
-
-</body>
+<html lang="en">
+  <head>
+    <title>Pluralsight Admin</title>
+  </head>
+  <body>
+    <h1>React and Redux in ES6 on Pluralsight</h1>
+    <div id="app"></div>
+    <script src="/bundle.js"></script>
+  </body>
 </html>
